objects/LAT_ChecklistVisita_Question__c.object
<CustomObject>
    <fields>
        <fullName>Answered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Respondida</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checklist__c</fullName>
        <label>Checklist de Visita ARG</label>
        <referenceTo>CLV_ChecklistVisita_ARG__c</referenceTo>
        <relationshipLabel>Preguntas Checklist</relationshipLabel>
        <relationshipName>Preguntas_Checklist</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAT_Answer__c</fullName>
        <label>Respuesta</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_Checkbox_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Respuesta Realizada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Question__c</fullName>
        <label>Pregunta</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LAT Product</label>
        <referenceTo>LAT_Product__c</referenceTo>
        <relationshipLabel>Preguntas Checklist</relationshipLabel>
        <relationshipName>Preguntas_Checklist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RespuestaFormula__c</fullName>
        <formula>IF(CONTAINS(RecordType.Name, &apos;Checkbox&apos;),IF( LAT_Checkbox_Answer__c,&apos;SI&apos;,IF( Answered__c,&apos;NO&apos;,&apos;&apos; ) ) ,LAT_Answer__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Respuesta</label>
        <type>Text</type>
    </fields>
    <label>Pregunta Checklist</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Question</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preguntas Checklist</pluralLabel>
    <recordTypes>
        <fullName>Checkbox</fullName>
        <active>true</active>
        <label>Checkbox</label>
    </recordTypes>
    <recordTypes>
        <fullName>Texto</fullName>
        <active>true</active>
        <label>Texto</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>